# xml_server

./: Dockerfile  main.py  pyproject.toml
xml_server/: xml_file.py
