[project]
name = "xml-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi-xml>=1.1.1",
    "fastapi[standard]>=0.122.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "types-sqlalchemy>=1.4.53.38",
]
